--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <nav>
   <ul>
     <li><a href="#home">الرئيسية</a></li>|
+<li><a href="#about">من نحن</a></li>|
     <li><a href="#products">العبايات</a></li>|
     <li><a href="#contact">تواصل معنا</a></li>|
     <li><a href="login.html">تسجيل الدخول</a></li>|
@@ -22,6 +23,12 @@
   </ul>
 </nav>
     </header>
+<section id="about">
+    <h2>من نحن</h2>
+    <p>في <strong>عبايتي</strong>، نؤمن بأن الأناقة تعكس الجمال الداخلي للمرأة. نسعى لتقديم أفضل التصاميم التي تلبي احتياجات المرأة العصرية والمحافظة.</p>
+    <p>رؤيتنا هي أن نصبح الوجهة الأولى للعبايات في العالم العربي من خلال تقديم منتجات عالية الجودة بتصاميم متميزة.</p>
+    <p>نتشرف بأن نكون جزءًا من رحلتك في اختيار الأفضل دائمًا.</p>
+</section>
 
     <section id="home">
         <h2>مرحباً بكم في عبايتي</h2>
